--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "express": "^4.17.0",
+    "http-status-codes": "^1.3.2",
+    "is-image-url": "^1.1.8",
     "jimp": "^0.6.4"
   }
 }
