--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.0",
     "http-status-codes": "^1.3.2",
     "is-image-url": "^1.1.8",
-    "jimp": "^0.6.4"
+    "jimp": "^0.6.4",
+    "node-fetch": "^2.6.0"
   }
 }
